--- a/index.html
+++ b/index.html
@@ -11,13 +11,55 @@
         <h1>Plant Manager</h1>
     </header>
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>Let's Get Started</h2>
+        <p>Bellow is a form you can fill out to add plants to the list. The initial is unordered with the option to sort the list</p>
+        <div class="container" id="form-container">
+        <form action="" name="plant-form" id="plant-form">     
+            <div class="form-group">
+            <label for="name">
+                Plant Name:
+                <input type="text" name="name" required>
+            </label>
+            </div>
+            <div class="form-group">
+            <label for="species">
+                Species:
+                <input type="text" name="species" required>
+            </label>
+            </div>
+                <p id="schedule-label">Water Schedule:</p>
+                <div class="form-group">
+                <label for="waterTimes">
+                    Times:
+                <input type="number" name="waterTimes" required>
+                </label>
+                </div>
+                <div class="form-group">
+                <label for="waterPer">
+                    Per:
+                <input type="text" name="waterPer" required>
+                </label>
+                </div>
+            <button type="submit">Add</button>
+        </form>
+        <form action="" name="plantRemoval" id="plantRemoval">
+            <div class="form-group">
+                <label for="numberToRemove">
+                    Number To remove:
+                    <input type="number" name="numberToRemove">
+                </label>
+                </div>
+                <button type="submit">Remove</button>
+        </form>
+    </div>
+        <ul id="plant-list">
+
+        </ul>
     </main>
     <footer>
 
     </footer>
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
