--- a/index.html
+++ b/index.html
@@ -18,40 +18,58 @@
             <div class="form-group">
             <label for="name">
                 Plant Name:
-                <input type="text" name="name" required>
+                <input 
+                    type="text" 
+                    name="name"
+                    placeholder="Enter plant name"
+                    aria-placeholder="Enter plant name" 
+                    required>
             </label>
             </div>
             <div class="form-group">
             <label for="species">
                 Species:
-                <input type="text" name="species" required>
+                <input 
+                    type="text" 
+                    name="species" 
+                    placeholder="Enter plant species"
+                    aria-placeholder="Enter plant species" 
+                    required>
             </label>
             </div>
                 <p id="schedule-label">Water Schedule:</p>
                 <div class="form-group">
-                <label for="waterTimes">
-                    Times:
-                <input type="number" name="waterTimes" required>
+                    <label for="waterTimes">
+                        Times:
+                        <input 
+                            type="number"  
+                            name="waterTimes"
+                            placeholder="Enter how many times to water plant"
+                            aria-placeholder="Enter how many times to water plant"  
+                            required
+                            min = 1>
                 </label>
                 </div>
                 <div class="form-group">
-                <label for="waterPer">
-                    Per:
-                <input type="text" name="waterPer" required>
+                    <label for="waterPer">
+                        Per:
+                    <input 
+                        type="text" 
+                        name="waterPer"
+                        placeholder="Enter the time frame used examples(day/week)"
+                        aria-placeholder="Enter the time frame used examples(day/week)"  
+                        required>
                 </label>
                 </div>
             <button type="submit">Add</button>
-        </form>
-        <form action="" name="plantRemoval" id="plantRemoval">
-            <div class="form-group">
-                <label for="numberToRemove">
-                    Number To remove:
-                    <input type="number" name="numberToRemove">
-                </label>
-                </div>
+            </form>
+            <form name="plant-removal-form" id="plant-removal-form">
+                <label for="plantNameToRemove">
+                    Name a plant to remove:
+                    <input type="text" name="plantNameToRemove" id="plantNameToRemove">
                 <button type="submit">Remove</button>
-        </form>
-    </div>
+                </label>
+            </form>
         <ul id="plant-list">
 
         </ul>
@@ -61,5 +79,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="plants.js"></script>
 </body>
 </html>
