--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Let's Get Started</h2>
         <p>Bellow is a form you can fill out to add plants to the list. The initial is unordered with the option to sort the list</p>
         <div class="container" id="form-container">
-        <form action="" name="plant-form" id="plant-form">     
+        <form action="" id="plant-form">     
             <div class="form-group">
             <label for="name">
                 Plant Name:
@@ -47,21 +47,18 @@
                             name="waterTimes"
                             placeholder="Enter times to water plant"
                             aria-placeholder="Enter times to water plant"  
-                            required
-                            min = 1
-                            max = 5>
+                            >
                 </label>
                 </div>
                 <div class="form-group">
-                    <label for="waterPer">
-                        Per:
-                    <input 
-                        type="text" 
-                        name="waterPer"
-                        placeholder="Enter the time frame used examples(day/week)"
-                        aria-placeholder="Enter the time frame used examples(day/week)"  
-                        required>
-                </label>
+                    <label for="per">Per:
+
+                <select name="waterPer" id="waterPer">
+                    <option value="Day">Day</option>
+                    <option value="Week">Week</option>
+                    <option value="Month">Month</option> 
+                </select>
+            </label>
                 </div>
             <button type="submit">Add</button>
             </form>
