--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     name="name"
                     placeholder="Enter plant name"
                     aria-placeholder="Enter plant name" 
-                    required>
+                    >
             </label>
             </div>
             <div class="form-group">
@@ -35,7 +35,7 @@
                     name="species" 
                     placeholder="Enter plant species"
                     aria-placeholder="Enter plant species" 
-                    required>
+                    >
             </label>
             </div>
                 <p id="schedule-label">Water Schedule:</p>
@@ -54,9 +54,9 @@
                     <label for="per">Per:
 
                 <select name="waterPer" id="waterPer">
-                    <option value="Day">Day</option>
-                    <option value="Week">Week</option>
-                    <option value="Month">Month</option> 
+                    <option value="day">Day</option>
+                    <option value="week">Week</option>
+                    <option value="month">Month</option> 
                 </select>
             </label>
                 </div>
@@ -84,6 +84,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script src="plants.js"></script>
+    <script src="json.js"></script>
 </body>
 </html>
