--- a/index.html
+++ b/index.html
@@ -1,89 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant-Manager</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Plant Manager</h1>
-    </header>
-    
-    <main>
-        <h2>Let's Get Started</h2>
-        <p>Bellow is a form you can fill out to add plants to the list. The initial is unordered with the option to sort the list</p>
-        <div class="container" id="form-container">
-        <form action="" id="plant-form">     
-            <div class="form-group">
-            <label for="name">
-                Plant Name:
-                <input 
-                    type="text" 
-                    name="name"
-                    placeholder="Enter plant name"
-                    aria-placeholder="Enter plant name" 
-                    >
-            </label>
-            </div>
-            <div class="form-group">
-            <label for="species">
-                Species:
-                <input 
-                    type="text" 
-                    name="species" 
-                    placeholder="Enter plant species"
-                    aria-placeholder="Enter plant species" 
-                    >
-            </label>
-            </div>
-                <p id="schedule-label">Water Schedule:</p>
-                <div class="form-group">
-                    <label for="waterTimes">
-                        Times:
-                        <input 
-                            type="number"  
-                            name="waterTimes"
-                            placeholder="Enter times to water plant"
-                            aria-placeholder="Enter times to water plant"  
-                            >
-                </label>
-                </div>
-                <div class="form-group">
-                    <label for="per">Per:
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Plant-Manager</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Plant Manager</h1>
+		</header>
 
-                <select name="waterPer" id="waterPer">
-                    <option value="day">Day</option>
-                    <option value="week">Week</option>
-                    <option value="month">Month</option> 
-                </select>
-            </label>
-                </div>
-            <button type="submit">Add</button>
-            </form>
-            <form name="plant-removal-form" id="plant-removal-form">
-                <label for="plantNameToRemove">
-                    Name a plant to remove:
-                    <input 
-                        type="text" 
-                        name="plantNameToRemove" 
-                        id="plantNameToRemove"
-                        placeholder="Enter name of plant to remove."
-                        aria-placeholder="Enter name of plant to remove.">
-                    <button type="submit">Remove</button>
-                </label>
-            </form>
-        <ul id="plant-list">
+		<main>
+			<h2>Let's Get Started</h2>
+			<p>
+				Bellow is a form you can fill out to add plants to the list. The initial
+				is unordered with the option to sort the list
+			</p>
+			<div class="container" id="form-container">
+				<form action="" id="plant-form">
+					<div class="form-group">
+						<label for="name">
+							Plant Name:
+							<input
+								type="text"
+								name="name"
+								placeholder="Enter plant name"
+								aria-placeholder="Enter plant name"
+							/>
+						</label>
+					</div>
+					<div class="form-group">
+						<label for="species">
+							Species:
+							<input
+								type="text"
+								name="species"
+								placeholder="Enter plant species"
+								aria-placeholder="Enter plant species"
+							/>
+						</label>
+					</div>
+					<p id="schedule-label">Water Schedule:</p>
+					<div class="form-group">
+						<label for="waterTimes">
+							Times:
+							<input
+								type="number"
+								name="waterTimes"
+								placeholder="Enter times to water plant"
+								aria-placeholder="Enter times to water plant"
+							/>
+						</label>
+					</div>
+					<div class="form-group">
+						<label for="per"
+							>Per:
 
-        </ul>
-    </main>
+							<select name="waterPer" id="waterPer">
+								<option value="day">Day</option>
+								<option value="week">Week</option>
+								<option value="month">Month</option>
+							</select>
+						</label>
+					</div>
+					<button type="submit">Add</button>
+				</form>
+			</div>
+			<form name="plant-removal-form" id="plant-removal-form">
+				<label for="plantNameToRemove">
+					Name a plant to remove:
+					<input
+						type="text"
+						name="plantNameToRemove"
+						id="plantNameToRemove"
+						placeholder="Enter name of plant to remove."
+						aria-placeholder="Enter name of plant to remove."
+					/>
+					<button type="submit">Remove</button>
+				</label>
+			</form>
+            <h3 style="margin-top: 0px; margin-bottom: 0px">Sort By</h3>
+			<button class="btn" id="sort-name">Name</button>
+			<button class="btn" id="sort-species">Species</button>
+			<ul id="plant-list"></ul>
+		</main>
 
-    <footer>
-
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    <script src="json.js"></script>
-</body>
+		<footer></footer>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
+		<script src="script.js"></script>
+		<script src="json.js"></script>
+	</body>
 </html>
