--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</select>
 						</label>
 					</div>
-					<button type="submit">Add</button>
+					<button class="btn" type="submit">Add</button>
 				</form>
 			</div>
 			<form name="plant-removal-form" id="plant-removal-form">
@@ -77,7 +77,7 @@
 						placeholder="Enter name of plant to remove."
 						aria-placeholder="Enter name of plant to remove."
 					/>
-					<button type="submit">Remove</button>
+					<button class="btn" type="submit">Remove</button>
 				</label>
 			</form>
             <h3 style="margin-top: 0px; margin-bottom: 0px">Sort By</h3>
